# test-solver-api

./: .dockerignore  .env  CLAUDE.md  Dockerfile  README.md  cloud-run.yaml  deploy.sh  pyproject.toml
.claude/: project-info.json  settings.json
.claude/agents/: prompt-engineer.md
.claude/commands/: clean.sh  dev.sh  format.sh  install.sh  lint.sh  test.sh
sql/: sample_data.sql
sql/migrations/: 001_initial_schema.sql
src/ai_test_solver/: __init__.py  main.py
src/ai_test_solver/api/: __init__.py  health.py  tests.py
src/ai_test_solver/core/: __init__.py  config.py  exceptions.py  logging.py
src/ai_test_solver/models/: __init__.py  api.py  knowledge.py  test.py
src/ai_test_solver/services/: __init__.py  database.py  embedding.py  file_storage.py  llm.py  ocr.py  question_extraction.py  rag.py  test_processing.py
tests/: __init__.py  test_health.py  test_ocr_service.py  test_pdf_upload.py
tests/fixtures/: create_mock_pdf.py
tests/integration/: test_pdf_workflow.py
